--- a/usbsas-hid/hid-user/Cargo.toml
+++ b/usbsas-hid/hid-user/Cargo.toml
@@ -9,6 +9,6 @@ license = "GPL-3.0"
 bitfield = "0.14"
 env_logger = "0.10"
 log = "0.4"
-rusb = { git = "https://github.com/losynix/rusb", branch = "disable_device_discovery", features = ["vendored"] }
+rusb = { version = "0.9", features = ["vendored"] }
 usbsas-sandbox = { path = "../../usbsas-sandbox" }
 x11 = "2.21"
