--- a/usbsas-scsi/Cargo.toml
+++ b/usbsas-scsi/Cargo.toml
@@ -7,4 +7,4 @@ license = "GPL-3.0"
 [dependencies]
 byteorder = "1.4"
 log = "0.4"
-rusb = { git = "https://github.com/losynix/rusb", branch = "disable_device_discovery", features = ["vendored"] }
+rusb = { version = "0.9", features = ["vendored"] }
