--- a/usbsas-hid/hid-dealer/Cargo.toml
+++ b/usbsas-hid/hid-dealer/Cargo.toml
@@ -17,6 +17,7 @@ lazy_static = "1.4"
 name = "usbsas-hid"
 maintainer = "usbsas"
 copyright = "usbsas"
+revision = "1"
 depends = "$auto, sudo, dbus, usbsas-kiosk"
 section = "utility"
 priority = "optional"
