--- a/usbsas-tools/Cargo.toml
+++ b/usbsas-tools/Cargo.toml
@@ -56,6 +56,7 @@ required-features = ["fswriter"]
 [package.metadata.deb]
 maintainer = "usbsas"
 copyright = "usbsas"
+revision = "1"
 depends = "$auto, usbsas-core, fuse3"
 section = "utility"
 priority = "optional"
