--- a/client/nwjs/package.json
+++ b/client/nwjs/package.json
@@ -1,8 +1,8 @@
 {
     "name": "usbsas",
-    "main": "http://localhost:8080",
+    "main": "web/index.html",
     "node-main": "node-main.js",
-    "chromium-args" : "--disable-accelerated-video  --disable-pinch --enable-logging=stderr",
+    "chromium-args" : "--disable-accelerated-video --disable-pinch --enable-logging=stderr",
     "window": {
         "name": "usbsas"
     }
