--- a/client/kiosk/usbsas-kiosk/lib/systemd/system/usbsas-client.service
+++ b/client/kiosk/usbsas-kiosk/lib/systemd/system/usbsas-client.service
@@ -17,7 +17,7 @@ UtmpIdentifier=tty2
 UtmpMode=user
 StandardOutput=journal
 ExecStartPre=/usr/bin/chvt 2
-ExecStart=/usr/bin/startx /usr/bin/usbsas-client -- vt2 :0 -keeptty -logfile /dev/null
+ExecStart=/usr/bin/startx /usr/bin/usbsas-client-xinit -- vt2 :0 -keeptty -logfile /dev/null
 ExecStop=/usr/bin/pkill nw
 Restart=always
 
