New web-client with wry

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ members = [
   "usbsas-server",
   "usbsas-hid/hid-user",
   "usbsas-hid/hid-dealer",
+  "client/usbsas-client",
   "usbsas-tools"
 ]
 default-members = [
