--- a/usbsas-server/Cargo.toml
+++ b/usbsas-server/Cargo.toml
@@ -37,6 +37,7 @@ reqwest = { version = "0.12", features = ["blocking", "json"] }
 
 [features]
 integration-tests = []
+log-json = ["usbsas-utils/log-json"]
 
 # cargo-deb
 [package.metadata.deb]
