ci: run rustfmt in check mode

--- a/.github/workflows/build_check_test.yml
+++ b/.github/workflows/build_check_test.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           toolchain: stable
       - name: cargo fmt
-        run: cargo fmt --all
+        run: cargo fmt --all --check
 
   audit:
     runs-on: ubuntu-latest
