--- a/usbsas-proto/Cargo.toml
+++ b/usbsas-proto/Cargo.toml
@@ -9,3 +9,5 @@ prost-build = "0.13"
 
 [dependencies]
 prost = "0.13"
+serde = { version = "1.0", features = ["derive"] }
+usbsas-config = { path = "../usbsas-config" }
