--- a/usbsas-usbsas/Cargo.toml
+++ b/usbsas-usbsas/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 license = "GPL-3.0"
 
 [dependencies]
+anyhow = "1.0"
 log = "0.4"
 serde_json = "1.0"
 thiserror = "2.0"
@@ -18,6 +19,10 @@ usbsas-proto = { path = "../usbsas-proto" }
 usbsas-sandbox = { path = "../usbsas-sandbox" }
 usbsas-utils = { path = "../usbsas-utils" }
 uuid = { version = "1.16", features = ["v4"] }
+
+[dev-dependencies]
+serde = { version = "1.0", features = ["derive"] }
+toml = "0.8"
 
 [features]
 integration-tests = []
