--- a/usbsas-net/Cargo.toml
+++ b/usbsas-net/Cargo.toml
@@ -16,6 +16,7 @@ serde_json = "1.0"
 thiserror = "2.0"
 usbsas-comm = { path = "../usbsas-comm" }
 usbsas-config = { path = "../usbsas-config" }
+usbsas-process = { path = "../usbsas-process" }
 usbsas-proto = { path = "../usbsas-proto" }
 usbsas-sandbox = { path = "../usbsas-sandbox" }
 usbsas-utils = { path = "../usbsas-utils" }
@@ -35,3 +36,7 @@ name = "usbsas-uploader"
 [[bin]]
 path = "src/bin/downloader.rs"
 name = "usbsas-downloader"
+
+[[bin]]
+path = "src/bin/jsonparser.rs"
+name = "usbsas-jsonparser"
