--- a/usbsas-usbsas/Cargo.toml
+++ b/usbsas-usbsas/Cargo.toml
@@ -10,7 +10,7 @@ clap = "4.5"
 log = "0.4"
 serde_json = "1.0"
 thiserror = "2.0"
-time = "0.3"
+time = { version = "0.3", features = ["macros"] }
 uname = "0.1"
 usbsas-comm = { path = "../usbsas-comm" }
 usbsas-config = { path = "../usbsas-config" }
@@ -22,10 +22,17 @@ usbsas-utils = { path = "../usbsas-utils" }
 uuid = { version = "1.16", features = ["v4"] }
 
 [dev-dependencies]
+assert_cmd = "2.0"
+flate2 = { version = "1.1", features = ["zlib-rs"], default-features = false }
+hex-literal = "1.0"
+nix = { version = "0.29", features = ["process", "signal"] }
+reqwest = { version = "0.12", features = ["blocking"] }
 serde = { version = "1.0", features = ["derive"] }
+sha2 = "0.10"
 toml = "0.8"
 
 [features]
+mock = []
 integration-tests = []
 
 # cargo-deb
