--- a/usbsas-client/Cargo.toml
+++ b/usbsas-client/Cargo.toml
@@ -26,7 +26,7 @@ name = "usbsas-kiosk"
 maintainer = "usbsas"
 copyright = "usbsas"
 revision = "1"
-depends = "$auto, usbsas-server, xserver-xorg-core, x11-xserver-utils, xinit, xdotool, unclutter, fonts-noto-color-emoji"
+depends = "$auto, usbsas-server, xserver-xorg-core, x11-xserver-utils, libxkbcommon-x11-0, xinit, xdotool, unclutter, fonts-noto-color-emoji"
 section = "utility"
 priority = "optional"
 maintainer-scripts = "debian/"
