--- a/usbsas-tools/Cargo.toml
+++ b/usbsas-tools/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "usbsas-tools"
-version = "0.1.5"
+version = "0.2.0"
 edition = "2021"
 license = "GPL-3.0"
 description = "usbsas tools"
@@ -57,7 +57,7 @@ required-features = ["fswriter"]
 maintainer = "usbsas"
 copyright = "usbsas"
 revision = "1"
-depends = "$auto, usbsas-core, fuse3"
+depends = "$auto, usbsas-server, fuse3"
 section = "utility"
 priority = "optional"
 systemd-units = { enable = false }
