--- a/usbsas-usbsas/Cargo.toml
+++ b/usbsas-usbsas/Cargo.toml
@@ -8,6 +8,7 @@ license = "GPL-3.0"
 anyhow = "1.0"
 clap = "4.5"
 log = "0.4"
+nix = { version = "0.30", features = ["fs"] }
 serde_json = "1.0"
 thiserror = "2.0"
 time = { version = "0.3", features = ["macros"] }
