--- a/debian/Makefile
+++ b/debian/Makefile
@@ -9,12 +9,14 @@ SRV_VER := $(shell grep '^version = ' ../usbsas-usbsas/Cargo.toml | cut -d'"' -f
 ASRV_VER := $(shell grep '^version = ' ../usbsas-analyzer-server/Cargo.toml | cut -d'"' -f2)-1
 HID_VER := $(shell grep '^version = ' ../usbsas-hid/hid-dealer/Cargo.toml | cut -d'"' -f2)-1
 KIOSK_VER := $(shell grep '^version = ' ../usbsas-client/Cargo.toml | cut -d'"' -f2)-1
+TOOLS_VER := $(shell grep '^version = ' ../usbsas-tools/Cargo.toml | cut -d'"' -f2)-1
 
 all: live-iso/usbsas-$(ISO_VER)-amd64.hybrid.iso
 
 pkgs: $(PKG_DIR)/usbsas-kiosk_$(KIOSK_VER)_amd64.deb \
 	$(PKG_DIR)/usbsas-server_$(SRV_VER)_amd64.deb \
 	$(PKG_DIR)/usbsas-analyzer-server_$(ASRV_VER)_amd64.deb \
+	$(PKG_DIR)/usbsas-tools_$(TOOLS_VER)_amd64.deb \
 	$(PKG_DIR)/usbsas-hid_$(HID_VER)_amd64.deb
 
 $(PKG_DIR)/usbsas-kiosk_$(KIOSK_VER)_amd64.deb:
@@ -33,6 +35,10 @@ $(PKG_DIR)/usbsas-hid_$(HID_VER)_amd64.deb:
 	cargo build --release --manifest-path=../usbsas-hid/hid-user/Cargo.toml
 	cargo build --release --manifest-path=../usbsas-hid/hid-dealer/Cargo.toml
 	cargo-deb --no-build --manifest-path=../usbsas-hid/hid-dealer/Cargo.toml
+
+$(PKG_DIR)/usbsas-tools_$(TOOLS_VER)_amd64.deb:
+	cargo build --release --manifest-path=../usbsas-tools/Cargo.toml
+	cargo-deb --no-build --manifest-path=../usbsas-tools/Cargo.toml
 
 live-iso/usbsas-$(ISO_VER)-amd64.hybrid.iso: pkgs
 	make -C live-iso
