--- a/usbsas-client/Cargo.toml
+++ b/usbsas-client/Cargo.toml
@@ -14,6 +14,7 @@ log = "0.4"
 serde_json = "1.0"
 sysinfo = "0.37"
 time = { version = "0.3", features = ["local-offset"] }
+tokio = { version = "1.47", features = ["sync"] }
 usbsas-comm = { path = "../usbsas-comm" }
 usbsas-config = { path = "../usbsas-config" }
 usbsas-proto = { path = "../usbsas-proto" }
