--- a/usbsas-client/Cargo.toml
+++ b/usbsas-client/Cargo.toml
@@ -15,6 +15,7 @@ serde_json = "1.0"
 sysinfo = "0.37"
 time = { version = "0.3", features = ["local-offset"] }
 tokio = { version = "1.47", features = ["sync"] }
+tokio-stream = "0.1"
 usbsas-comm = { path = "../usbsas-comm" }
 usbsas-config = { path = "../usbsas-config" }
 usbsas-proto = { path = "../usbsas-proto" }
