--- a/usbsas-net/Cargo.toml
+++ b/usbsas-net/Cargo.toml
@@ -14,6 +14,7 @@ reqwest = { version = "0.12", features = ["blocking", "json", "gzip"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "2.0"
+url = "2.5"
 usbsas-comm = { path = "../usbsas-comm" }
 usbsas-config = { path = "../usbsas-config" }
 usbsas-process = { path = "../usbsas-process" }
