--- a/usbsas-client/Cargo.toml
+++ b/usbsas-client/Cargo.toml
@@ -10,6 +10,7 @@ bytesize = "2.1"
 clap = "4.5"
 env_logger = "0.11"
 iced = { version = "0.13", features = ["advanced", "image", "smol", "svg"] }
+libc = "0.2"
 log = "0.4"
 serde_json = "1.0"
 sysinfo = "0.37"
@@ -19,6 +20,7 @@ tokio-stream = "0.1"
 usbsas-comm = { path = "../usbsas-comm" }
 usbsas-config = { path = "../usbsas-config" }
 usbsas-proto = { path = "../usbsas-proto" }
+usbsas-sandbox = { path = "../usbsas-sandbox" }
 usbsas-utils = { path = "../usbsas-utils" }
 uuid = { version = "1.18", features = ["v4"] }
 
