--- a/usbsas-usbsas/Cargo.toml
+++ b/usbsas-usbsas/Cargo.toml
@@ -10,6 +10,7 @@ clap = "4.5"
 log = "0.4"
 nix = { version = "0.30", features = ["feature", "fs"] }
 serde_json = "1.0"
+sha2 = "0.10"
 thiserror = "2.0"
 time = { version = "0.3", features = ["macros"] }
 usbsas-comm = { path = "../usbsas-comm" }
