Rename identificator -> identifier

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ members = [
   "usbsas-files2fs",
   "usbsas-files2tar",
   "usbsas-fs2dev",
-  "usbsas-identificator",
+  "usbsas-identifier",
   "usbsas-scsi2files",
   "usbsas-tar2files",
   "usbsas-net",
@@ -45,7 +45,7 @@ default-members = [
   "usbsas-files2fs",
   "usbsas-files2tar",
   "usbsas-fs2dev",
-  "usbsas-identificator",
+  "usbsas-identifier",
   "usbsas-scsi2files",
   "usbsas-tar2files",
   "usbsas-net",
