Fix example configuration file syntax

--- a/config.example.toml
+++ b/config.example.toml
@@ -126,10 +126,10 @@ contain = [".lnk/"]
 
 [[filters]]
 end = ".lnk"
-contain = "whatever"
+contain = ["whatever"]
 
 [[filters]]
-exact = ["autorun.inf"]
+exact = "autorun.inf"
 
 [[filters]]
 contain = ["thumbs.db"]
