Export files from local filesystem

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ members = [
   "usbsas-identifier",
   "usbsas-scsi2files",
   "usbsas-tar2files",
+  "usbsas-local2files",
   "usbsas-net",
   "usbsas-usbdev",
   "usbsas-usbsas",
@@ -44,6 +45,7 @@ default-members = [
   "usbsas-identifier",
   "usbsas-scsi2files",
   "usbsas-tar2files",
+  "usbsas-local2files",
   "usbsas-net",
   "usbsas-usbdev",
   "usbsas-client",
