--- a/usbsas-usbsas/Cargo.toml
+++ b/usbsas-usbsas/Cargo.toml
@@ -58,6 +58,7 @@ assets = [
   ["target/release/usbsas-downloader", "usr/libexec/", "755"],
   ["target/release/usbsas-files2fs", "usr/libexec/", "755"],
   ["target/release/usbsas-files2tar", "usr/libexec/", "755"],
+  ["target/release/usbsas-local2files", "usr/libexec/", "755"],
   ["target/release/usbsas-fs2dev", "usr/libexec/", "755"],
   ["target/release/usbsas-identifier", "usr/libexec/", "755"],
   ["target/release/usbsas-scsi2files", "usr/libexec/", "755"],
